# BigDataLesson

./: 0-环境安装.ipynb  1-Python基础语法.ipynb  README.md  pyproject.toml
机器学习入门/: clf.pickle  clf.pkl  matplotlib.ipynb  ml.ipynb  numpy-supplement.ipynb  numpy.ipynb  pandas.ipynb  scikit-learn.ipynb  分词.ipynb
模块学习/matplotlib/: Matplotlib教程.docx  ceshi001.py  数据可视化4.py  数据可视化5.1.py  数据可视化5.py  数据可视化6.py  数据可视化7.py  数据可视化基础01.py  数据可视化基础011.py  数据可视化基础012.py  数据可视化基础013.py  数据可视化基础013B更新（详细）.py  数据可视化基础013C更新（详细）.py  数据可视化基础013D更新（未完成）.py  数据可视化基础013D更新（详细）.py  数据可视化基础013E更新动画（未完成）.py  数据可视化基础013F更新动画（仿真未完成）.py  数据可视化基础013G2更新动画（可运行）.py  数据可视化基础013G31冒泡排序法更新动画（可运行）.py  数据可视化基础013G3冒泡排序法更新动画（可运行）.py  数据可视化基础013G41快速排序法更新动画（可运行）.py  数据可视化基础013G4快速排序法更新动画（可运行）.py  数据可视化基础013G51更新动画（可运行）.py  数据可视化基础013G52更新动画（可运行）.py  数据可视化基础013G61带停顿的更新动画（可运行）.py  数据可视化基础013G71scv导入带停顿的更新动画（可运行）.py  数据可视化基础013G813D动画的更新动画（可运行）.py  数据可视化基础013G91最小二乘法更新动画（可运行）.py  数据可视化基础013G更新动画（可运行）.py  数据可视化基础013更新（详细）.py  数据可视化基础02.py  数据可视化基础03.py  数据可视化基础04.py  数据可视化基础06.py  数据可视化基础07.py  数据可视化基础动态01.py  数据可视化基础动态03.py  数据可视化基础动态04.py  数据可视化简单1.py  数据可视化简单2.py  (+3 more)
模块学习/numpy/: NumPy教案草稿.docx  numpy_fibonacci.py  numpy基础001.py  numpy基础003.py  numpy基础004.py  numpy详细教程.docx  函数说明备选.py
模块学习/os/: file.py  fileplus.py  miaomiao.txt  os.py  os备用.py  python-collections模块未完成.py  python内建函数.py  python时间日期.py  python类.py  python类plus.py  python装饰器和抽象类.py  python错误和异常处理.py  python魔术方法.py  random-plus.py  random.py  test.txt  wangwang.txt  列表.py  字典.py  字符串.py  集合.py
模块学习/pandas/: excel数据处理001.py  panda.docx
模块学习/pandas/数据测试/: 数据测试.xlsx  明细数据测试原稿.xlsx  测试.xlsx  测试1.xlsx  测试2.xlsx  测试3.csv  测试3.xlsx
深度学习入门/: backward.ipynb  tensor_structure.ipynb
课件/: 01_Python入门.pptx  02_机器学习入门.pptx  06_深度学习入门.pptx
课件/参考资料/王心宇Python课件/: 扩展一 Python安装_IDE等.pptx  扩展三 个人发展.pptx  扩展二 Python课程进阶及答疑.pptx  第一章 导论.pptx  第三章 Python数据处理(上).pptx  第二章 Python入门.pptx  第五章 Python正则表达式及其他应用.pptx  第四章 Python数据处理(下).pptx
